--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ android/assets/
 android/documentation/
 android/example/
 android/LICENSE
+/Localytics/iphone/metadata.json
+/Localytics/iphone/dist
